--- a/index.html
+++ b/index.html
@@ -130,10 +130,18 @@
                     </div>
                 </div>
             </div>
+            <div class="btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
     </main>
-    <footer>
+    <footer class="secondary-bg">
+        <div class="footer-column">
 
+        </div>
+        <div class="footer-column">
+
+        </div>
     </footer>
 </body>
 </html>
